--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -67,5 +67,5 @@ body.dark-mode {
 
 body.dark-mode header {
     background-color: var(--sea-green);
-    color: black;
+    color: white;
 }
